--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Food Truck Finder</title>
+	<link rel="stylesheet" type="text/css" href="trucks.css">
 </head>
 <body>
-	<!-- content coming soon -->
+<h1>Food Truck Finder</h1>
+<div class="left">
+	<ul class="truck-list"><b>Food Trucks</b></ul>
+	<ul class="types-list"><b>Food Types</b></ul>
+</div>
+<div class="right">
+
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
