add new add new ul

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 <div class="left">
 	<ul class="truck-list"><b>Food Trucks</b></ul>
 	<ul class="types-list"><b>Food Types</b></ul>
+	<ul class="new-truck"><b>Add Truck</b></ul>
 </div>
 <div class="right">
-
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="client.js"></script>
