trucks not books

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Books</title>
+	<title>Food Trucks</title>
 	<link rel="stylesheet" href="trucks.css" />
 </head>
 <body>
