--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<h1>Food Trucks</h1>
-	<h2>Add Food Trucks:</h2>
+	<h2 id="action">Add Food Trucks:</h2>
 	<form>
 		<fieldset>
-			<legend>New Food Truck:</legend>
+			<legend id="truck-legend">New Food Truck:</legend>
 			<div class="form_input">
 				<input type="text" name="name" placeholder="Name" />
 			</div>
