Diane Zevenbergen Module 4 HW

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,9 @@
 	</form>
 	<h2>Food Truck list:</h2>
 	<ul class="trucks-list"></ul>
+    <br>
+    <h4><a id="foodChoices" href="javascript:void(0)">Food type options:</a></h4>
+    <ul class="food-type-list"></ul>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="client.js"></script>
 </body>
